website/versioned_docs/version-2.14.x/reference/subsystems/dockerfile-parser.mdx
---
title: dockerfile-parser
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Used to parse Dockerfile build specs to infer their dependencies.

Backend: <span className="color--primary">`pants.backend.docker`</span>

Config section: <span className="color--primary">`[dockerfile-parser]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--dockerfile-parser-version=<str>`}
  env_repr="PANTS_DOCKERFILE_PARSER_VERSION"
  default_repr={`dockerfile==3.2.0`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--dockerfile-parser-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCKERFILE_PARSER_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--dockerfile-parser-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCKERFILE_PARSER_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<4"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--dockerfile-parser-lockfile=<str>`}
  env_repr='PANTS_DOCKERFILE_PARSER_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.14.2/src/python/pants/backend/docker/subsystems/dockerfile.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 generate-lockfiles --resolve=dockerfile-parser`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

## Deprecated options

None

</span>

