website/versioned_docs/version-2.16.x/reference/subsystems/dockerfile-parser.mdx
---
title: dockerfile-parser
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Used to parse Dockerfile build specs to infer their dependencies.

Backend: <span className="color--primary">`pants.backend.docker`</span>

Config section: <span className="color--primary">`[dockerfile-parser]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `install_from_resolve`

<Option
  cli_repr={`--dockerfile-parser-install-from-resolve=<str>`}
  env_repr='PANTS_DOCKERFILE_PARSER_INSTALL_FROM_RESOLVE'
  default_repr={`None`}
>
If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in [python].resolves, as described in https://www.pantsbuild.org/v2.16/docs/python-third-party-dependencies#user-lockfiles.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants.

If unspecified, and the `lockfile` option is set, the tool will use the custom `dockerfile-parser` &quot;tool lockfile&quot; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `requirements`

<Option
  cli_repr={`--dockerfile-parser-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCKERFILE_PARSER_REQUIREMENTS'
  default_repr={`[]`}
>
If install_from_resolve is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of python_requirement targets (or targets that generate or depend on python_requirement targets).

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--dockerfile-parser-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCKERFILE_PARSER_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<4"]`}
>
  Python interpreter constraints for this tool.
</Option>

## Deprecated options

### `version`

<Option
  cli_repr={`--dockerfile-parser-version=<str>`}
  env_repr="PANTS_DOCKERFILE_PARSER_VERSION"
  default_repr={`dockerfile==3.2.0`}
  removal_version="2.18.0.dev1"
  removal_hint={
    "Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles."
  }
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--dockerfile-parser-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCKERFILE_PARSER_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
  removal_version="2.18.0.dev1"
  removal_hint={
    "Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles."
  }
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `lockfile`

<Option
  cli_repr={`--dockerfile-parser-lockfile=<str>`}
  env_repr='PANTS_DOCKERFILE_PARSER_LOCKFILE'
  default_repr={`<default>`}
  removal_version='2.18.0.dev0'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.<br /><br />1. If you have an existing resolve that includes the requirements for this tool,<br />    you can set `[dockerfile-parser].install_from_resolve = "<resolve name>".<br />    This may be the case if the tool also provides a runtime library, and you want<br />    to specify the version in just one place.<br />2. If not, you can set up a new resolve as described at the link above.<br /><br />Either way, the resolve you choose should provide the requirements currently set by the `version` and `extra-requirements` options for this tool, which you can see by running `pants help-advanced dockerfile-parser`.'}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.16.1rc4/src/python/pants/backend/docker/subsystems/dockerfile.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `scie-pants-linux-x86_64 generate-lockfiles --resolve=dockerfile-parser`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

</span>

